--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../static/style.css" />
     <title>dsw2seek</title>
+
+    <h1>Upload project</h1>
+    <form id="uploadForm" action="./upload" method="post">
+      <label for="title">Title:</label> 
+      <input type="text" id="title" name="title" required> 
+      <label for="jsonFile">Select a JSON file:</label> 
+      <input type="file" id="jsonFile" name="jsonFile" accept=".json" required>
+      <br><br>
+      <input type="submit" value="Upload">
+    </form>
+
   </head>
   <body></body>
 </html>
