--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,12 +1,13 @@
-/*Styling for index form*/
 body {
     font-family: Arial, sans-serif;
-    background-color: #e1e1e1;
+    background-color:  #010d25;
+    background-image: radial-gradient(circle, #003572,  #010d25); /* #010d25;*/
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
+    color: white;
 }
 
 h1 {
@@ -20,32 +21,36 @@ form {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     padding: 30px;
     width: 300px;
+    color: black;
+    text-align: center; 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
 }
 
 label {
     display: block;
-}
-
-input[type='text']{
-    margin-bottom: 20px;
-    border-radius: 4px;
+    text-align: center; 
+    margin-bottom: 5px; 
 }
 
 input[type="file"] {
-    width: 90%;
+    width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    margin-top: 20px;
+    border: 0.5px solid #ccc;
     border-radius: 4px;
 }
 
 input[type="submit"] {
-    align-items: center;
     background-color: #007BFF;
     color: #fff;
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
     cursor: pointer;
+    display: block; 
+    margin: 20px auto; 
 }
 
 input[type="submit"]:hover {
