--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -5,11 +5,17 @@
     <link rel="stylesheet" href="../static/style.css" />
     <title>dsw2seek</title>
   </head>
-  <body>
+  <body id="uploadOutput">
     {% if error %}
     <h1>{{error}}</h1>
     {% else %}
     <h1>Your file has been uploaded.</h1>
+    <br>
+    <h3>{{projectStatus}}</h3>
+    <br>
+    {% for status in accountStatus %}
+    <li>{{ status }}</li>
+    {% endfor %}
     {% endif %}
   </body>
 </html>
