--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -5,11 +5,43 @@
     <link rel="stylesheet" href="../static/style.css" />
     <title>dsw2seek</title>
   </head>
-  <body>
-    {% if error %}
-    <h1>{{error}}</h1>
-    {% else %}
-    <h1>Your file has been uploaded.</h1>
-    {% endif %}
+  <body class="flex">
+    <h1 class="centered">Upload</h1>
+    <div class="accordion">
+      <div class="accordion-header">
+        <h2>Creating users</h2>
+      </div>
+      {% for person in people %}
+      {% set status = person['response']['status_code'] %}
+      <div class="accordion-item">
+        <p>
+          <!-- Display person as: name (mail) - error -->
+          {{person['name']}} ({{person['mbox']}}) - 
+          {% if status // 100 != 2 %}
+            <span class="error">Error {{status}}: {{person['response']['json']}}</span>
+          {% else %}
+            <span class="success">OK!</span>
+          {% endif %}
+        </p>
+      </div>
+      {% endfor %}
+    </div>
+
+    <div class="accordion">
+      <div class="accordion-header">
+        <h2>Creating project</h2>
+      </div>
+      <div class="accordion-item">
+        <p>
+          {% set status = project['response']['status_code'] %}
+          {{project['title']}} - 
+          {% if status // 100 != 2 %}
+            <span class="error">Error {{status}}: {{project['response']['json']}}</span>
+          {% else %}
+            <span class="success">OK!</span>
+          {% endif %}
+        </p>
+      </div>
+    </div>
   </body>
 </html>
