--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,13 @@
       <label for="jsonFile">Select a JSON file:</label> 
       <input type="file" id="jsonFileId" name="jsonFile" accept=".json" required>
       <br><br>
+      <label for="institution">Select an institution:</label> 
+      <select id="institutionSelect" name="institution"></select>
+        {% for institution in institutions %}
+          <option value="{{institution['attributes']['title']}}" disabled selected>{{institution["attributes"]["title"]}}</option>
+        {% endfor %}
+      </select>
+      <br>
       <input type="submit" value="Upload">
     </form>
 
