--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,23 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../static/style.css" />
+    <link rel="stylesheet" href="../static/spinner.css" />
     <title>dsw2seek</title>
-
+  </head>
+  <body>
     <h1>Upload project</h1>
     <form id="uploadForm" action="./upload" method="post" enctype="multipart/form-data">
       <label for="jsonFile">Select a JSON file:</label> 
       <input type="file" id="jsonFileId" name="jsonFile" accept=".json" required>
-      <br><br>
-      <label for="institution">Select an institution:</label> 
-      <select id="institutionSelect" name="institution"></select>
-        {% for institution in institutions %}
-          <option value="{{institution['attributes']['title']}}" disabled selected>{{institution["attributes"]["title"]}}</option>
-        {% endfor %}
-      </select>
-      <br>
+
+      <br /><br />
+
+      <div class="select-box">
+        <div class="options-container"></div>
+        <div class="selected">
+          Select institution
+        </div>
+        <div class="search-box">
+          <input type="text" placeholder="Start typing..." />
+          <div class="spinner"></div>
+        </div>
+      </div>
+
+      <input id="institutionId" name="institutionId" hidden />
+
+      <br />
+
       <input type="submit" value="Upload">
     </form>
-
-  </head>
-  <body></body>
+    <script src="../static/script.js"></script>
+  </body>
 </html>
