--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../static/style.css" />
-    <title>dsw2seek</title>
 
-    <h1>Upload project</h1>
-    <form id="uploadForm" action="./upload" method="post" enctype="multipart/form-data">
-      <label for="jsonFile">Select a JSON file:</label> 
-      <input type="file" id="jsonFileId" name="jsonFile" accept=".json" required>
-      <br><br>
-      <input type="submit" value="Upload">
-    </form>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="../static/style.css" />
+  <title>dsw2seek</title>
 
-  </head>
-  <body></body>
+  <h1>Upload project</h1>
+  <form id="uploadForm" action="./upload" method="post" enctype="multipart/form-data">
+    <label for="username">Username:</label>
+    <input type="text" id="usernameId" name="username" required>
+    <br>
+    <label for="password">Password:</label>
+    <input type="password" id="passwordId" name="password" required>
+    <br>
+    <label for="jsonFile">Select a JSON file:</label>
+    <input type="file" id="jsonFileId" name="jsonFile" accept=".json" required>
+    <br><br>
+    <input type="submit" value="Upload">
+  </form>
+
+</head>
+
+<body></body>
+
 </html>
