--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
       <label for="jsonFile">Select a JSON file:</label> 
       <input type="file" id="jsonFileId" name="jsonFile" accept=".json" required>
       <br><br>
-      <input type="submit" value="Upload">
+      <input class="button" type="submit" value="Upload">
     </form>
 
   </head>
