--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,3 +1,5 @@
+/* ========= General page styles ========= */
+
 body {
     font-family: Arial, sans-serif;
     background-color:  #010d25;
@@ -15,6 +17,16 @@ h1 {
     margin: 5%;
 }
 
+.success {
+    color: green;
+}
+
+.error {
+    color: red;
+}
+
+/* ========= Form ========= */
+
 form {
     background-color: #fff;
     border-radius: 8px;
@@ -28,21 +40,31 @@ form {
     align-items: center; 
 }
 
+#login-error {
+    visibility: hidden;
+}
+
 label {
     display: block;
-    text-align: center; 
+    text-align: center;
     margin-bottom: 5px; 
 }
 
 input[type="file"] {
-    width: 100%;
-    padding: 10px;
-    margin-top: 20px;
-    border: 0.5px solid #ccc;
-    border-radius: 4px;
+    border: 2px solid #003572;
+    border-radius: 8px;
+    padding: 8px;
 }
 
-input[type="submit"] {
+input[type="text"], input[type="password"] {
+    padding: 8px;
+    border-radius: 8px;
+    margin: 10px;
+    width: 90%;
+    font-size: 1em;
+}
+
+input[type="submit"], input[type="button"], button {
     background-color: #003572;
     color: #fff;
     border: none;
@@ -51,11 +73,41 @@ input[type="submit"] {
     cursor: pointer;
     display: block; 
     margin: 20px auto; 
+    font-size: 1em;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover, input[type="button"]:hover, button:hover {
     background-color: #014a9e;
 }
+
+.button-group {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.button-spinner {
+    display: block;
+    background: url('img/spinner-light.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+}
+
+.tab, .tab.active {
+    padding: 5px;
+}
+
+.tab {
+    display: none;
+}
+
+.tab.active {
+    display: block;
+}
+
+/* ========= Institution selector ========= */
 
 .select-box {
     position: relative;
@@ -174,7 +226,8 @@ input[type="submit"]:hover {
     margin: 0 auto;
 }
 
-/* upload page */
+/* ========= Upload page ========= */
+
 .flex {
     flex-direction: column;
 }
@@ -196,12 +249,4 @@ input[type="submit"]:hover {
 .accordion-header > h2 {
     margin: 0;
     border-bottom: 1px solid #444;
-}
-
-.success {
-    color: green;
-}
-
-.error {
-    color: red;
 }
